--- a/cadastro/styles_cadastro/inicio.css
+++ b/cadastro/styles_cadastro/inicio.css
@@ -1,24 +1,35 @@
+html,
+body {
+
+    background-color: #F4F5F9;
+    
+
+}
 
 
-.header {
 
-    width: 100%;
-    height: 100%;
+
+header {
+
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center; /* Adiciona este alinhamento */
+ 
 
-    background: #FAF8F5;
+
 }
 
+
+
 .master_texto_header {
-    margin-top: 190px;
-    
+    margin-top: 30px;
+
 
 }
 
 .texto_header {
-    
+
     margin-left: auto;
 
 
@@ -31,34 +42,37 @@
 }
 
 .texto_header h1 {
-    font-size: 30px;
+    color: #3F414E;
+    text-align: center;
+    font-family: Mirza;
+    font-size: 75px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 135%;
+    /* 101.25px */
 }
 
-.subtexto_header {
-    margin-top: 8%;
-    color: #A1A4B2;
+.subtexto_header h6 {
+    color: rgba(47, 47, 47, 0.65);
     text-align: center;
     font-family: Inter;
-    font-size: 16px;
+    font-size: 20px;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 165%;
-    /* 26.4px */
-    padding-left: 9%;
-    padding-right: 9%;
-    word-spacing: 1px;
+    /* 33px */
 }
 
 
 
 
 .main_master {
-    margin-top: 243px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    margin-top: 300px; /* Ajuste a margem conforme necessário */
 }
 
 .botao_login {
@@ -74,7 +88,7 @@
     background: #8E97FD;
     height: 55.789px;
     flex-shrink: 0;
-    padding-top: 2%;
+    padding-top: 10px;
     width: 305px;
     text-decoration: none;
 }
